# irfu-python

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .scrutinizer.yml  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  LICENCE.txt  MANIFEST.in  README.md  README.rst  build_deploy.sh  pyproject.toml  readthedocs.yml  references.bib  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql.yml  flake8.yml  publish-to-pypi.yml  pylint.yml  tests.yml
doc/: environment.yml
doc/source/: conf.py  index.rst  pyrfu.mms.rst  pyrfu.plot.rst  pyrfu.solo.rst
docs/: .environement.yml.icloud  Makefile  conf.py  contributing.rst  environment.yml  index.rst  installation.rst  make.bat  requirements.txt
docs/_build/doctrees/: .environment.pickle.icloud  .index.doctree.icloud  .pyrfu.doctree.icloud  .pyrfu.mms.doctree.icloud  .pyrfu.plot.doctree.icloud  .pyrfu.pyrf.doctree.icloud  .pyrfu.solo.doctree.icloud  .pyrfu.tests.doctree.icloud  environment.pickle  index.doctree  pyrfu.doctree  pyrfu.mms.doctree  pyrfu.plot.doctree  pyrfu.pyrf.doctree  pyrfu.solo.doctree  pyrfu.tests.doctree
docs/_build/html/: .buildinfo  .index.html.icloud  .py-modindex.html.icloud  .pyrfu.mms.html.icloud  .pyrfu.plot.html.icloud  .pyrfu.solo.html.icloud  genindex.html  index.html  objects.inv  py-modindex.html  pyrfu.html  pyrfu.mms.html  pyrfu.plot.html  pyrfu.pyrf.html  pyrfu.solo.html  pyrfu.tests.html  search.html  searchindex.js
docs/dev/: index.rst
docs/examples/: index.rst
docs/examples/00_overview/: index.rst  quick-overview.ipynb
docs/examples/01_mms/: example_mms_b_e_j.ipynb  example_mms_ebfields.ipynb  example_mms_edr_signatures.ipynb  example_mms_eis.ipynb  example_mms_electron_psd.ipynb  example_mms_feeps.ipynb  example_mms_hpca.ipynb  example_mms_ipshocks.ipynb  example_mms_ohmslaw.ipynb  example_mms_particle_deflux.ipynb  example_mms_particle_distributions.ipynb  example_mms_particle_pad.ipynb  example_mms_polarizationanalysis.ipynb  example_mms_reduced_electron_dist.ipynb  example_mms_reduced_ion_dist.ipynb  example_mms_reduced_ion_dist_para.ipynb  example_mms_ressources.ipynb  example_mms_walen_test.ipynb  index.rst
docs/source/: conf.py  contributing.rst  examples.rst  getting_started.rst  index.rst  modules.rst  pyrfu.mms.rst  pyrfu.plot.rst  pyrfu.pyrf.rst  pyrfu.rst  quick-overview.rst
examples/: README.rst
examples/00_overview/: quick-overview.ipynb
examples/01_mms/: example_mms_b_e_j.ipynb  example_mms_ebfields.ipynb  example_mms_edr_signatures.ipynb  example_mms_eis.ipynb  example_mms_electron_psd.ipynb  example_mms_feeps.ipynb  example_mms_hpca.ipynb  example_mms_ohmslaw.ipynb  example_mms_particle_deflux.ipynb  example_mms_particle_distributions.ipynb  example_mms_particle_pad.ipynb  example_mms_polarizationanalysis.ipynb  example_mms_reduced_ele_dist.ipynb  example_mms_reduced_electron_dist.ipynb  example_mms_reduced_ion_dist.ipynb  example_mms_walen_test.ipynb
examples/02_dispersion/: example_dispersion_one_fluid.ipynb
pyrfu/: __init__.py  test_pyrf.py
pyrfu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyrfu/dispersion/: __init__.py  disp_surf_calc.py  one_fluid_dispersion.py
pyrfu/examples/: Example_MMS_B_E_J.py  Example_MMS_EBfields.py  Example_MMS_EDP_vs_FPI_vs_HPCA_brst.py  Example_MMS_EDP_vs_FPI_vs_HPCA_fast.py  Example_MMS_Polarization.py  Example_MMS_Polarizationanalysis.py  example_mms_b_e_j.py  example_mms_ebfields.py  example_mms_edp_vs_fpi_vs_hpca_brst.py  example_mms_edp_vs_fpi_vs_hpca_fast.py  example_mms_quickplot_all_sum.py
pyrfu/lp/: __init__.py  photo_current.py  thermal_current.py
pyrfu/maven/: __init__.py  config.json  db_init.py  download_data.py
pyrfu/mms/: __init__.py  ancillary.json  calc_feeps_omni.py  calc_feeps_pad.py  calc_hpca_anodes.py  calculate_epsilon.py  config.json  copy_files.py  copy_files_ancillary.py  correct_edp_probe_timing.py  current_location.py  db_get_ts.py  db_get_variable.py  db_init.py  def2psd.py  deflux_to_vdf.py  dft_time_shift.py  dft_timeshift.py  download.py  download_ancillary.py  download_data.py  dpf2psd.py  dpflux_to_vdf.py  dsl2gse.py  dsl2gsm.py  eis_ang_ang.py  eis_combine_proton_pad.py  eis_combine_proton_skymap.py  eis_combine_proton_spec.py  eis_moments.py  eis_omni.py  eis_pad.py  eis_pad_combine_sc.py  eis_pad_spinavg.py  eis_proton_correction.py  eis_skymap.py  eis_skymap_combine_sc.py  eis_spec_combine_sc.py  eis_spin_avg.py  estimate_phase_speed.py  (+82 more)
pyrfu/models/: __init__.py  igrf.py  ion_anisotropy_thresh.py  magnetopause_normal.py
pyrfu/plot/: __init__.py  add_position.py  annotate_heatmap.py  colorbar.py  ion_brazil_plot_thresh.py  make_labels.py  mms_pl_config.py  pl_scatter_matrix.py  pl_tx.py  plot_ang_ang.py  plot_clines.py  plot_contour.py  plot_heatmap.py  plot_line.py  plot_magnetosphere.py  plot_projection.py  plot_reduced_2d.py  plot_sitl_overview.py  plot_spectr.py  plot_surf.py  set_rlabel.py  span_tint.py  zoom.py
pyrfu/pydrk/: __init__.py  initialize.py
pyrfu/pyrf/: __init__.py  agyro_coeff.py  anisotropy_thresholds.py  autocorr.py  average_vdf.py  avg_4sc.py  brazil.py  c_4_grad.py  c_4_j.py  c_4_k.py  c_4_v.py  calc_ag.py  calc_agyro.py  calc_disprel_tm.py  calc_dng.py  calc_dt.py  calc_fs.py  calc_sqrtq.py  cart2sph.py  cart2sph_ts.py  cdfepoch2datetime64.py  compress_cwt.py  convert_fac.py  corr_deriv.py  cotrans.py  cross.py  date_str.py  datetime2iso8601.py  datetime642iso8601.py  datetime642ttns.py  datetime642unix.py  datetime_to_tt2000.py  dec_par_perp.py  dec_parperp.py  disp_surf_calc.py  dist_append.py  dot.py  dynamic_press.py  dynamicp.py  e_vxb.py  (+89 more)
pyrfu/solo/: __init__.py  config.json  db_init.py  get_ts.py  list_files.py  read_lfr_density.py  read_tnr.py  solo_config.py
pyrfu/stylesheets/: aps.mplstyle  metropolis.mplstyle  pyrfu.mplstyle
pyrfu/tests/: __init__.py  test_dispersion.py  test_mms.py  test_models.py  test_plot.py  test_pyrf.py  test_solo.py
source/: conf.py  index.rst  support.rst
source/.ipynb_checkpoints/: agyro_coeff-checkpoint.ipynb
(+576 files in other folders)
