[build-system]
requires = [
    "setuptools>=42",
    "wheel==0.38.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyrfu"
version = "2.4.13"
description = "Python Space Physics (RymdFysik) Utilities"
readme = "README.rst"
authors = [{ name = "Louis RICHARD", email = "louir@irfu.se" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft",
    "Operating System :: Microsoft :: MS-DOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "boto3>=1.34.45",
    "botocore>=1.34.59",
    "cdflib>=1.2.0",
    "keyring>=24.2.0",
    "geopack==1.0.10",
    "matplotlib>=3.8.0",
    "numba>=0.59.0",
    "numpy<1.27,>=1.22",
    "pandas==1.5.0",
    "pycdfpp==0.6.0",
    "python-dateutil==2.8.2",
    "requests<2.32.0,>=2.26.0",
    "scipy<1.11.0,>=1.7.3",
    "tqdm<4.66.0,>=4.62.3",
    "xarray==2023.9.0",
]
requires-python = ">=3.9,<3.12"

[project.optional-dependencies]
dev = ["black", "pip-tools"]

[project.urls]
homepage = "https://pypi.org/project/pyrfu/"
documentation = "https://pyrfu.readthedocs.io/en/latest/"
source = "https://github.com/louis-richard/irfu-python"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.json", "*.csv"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::RuntimeWarning",
]

[tool.black]
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/'''

[tool.isort]
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
disable = """
    missing-module-docstring,
    too-many-arguments,
    too-many-locals,
    too-many-lines,
    too-many-statements,
    too-many-branches,
    too-many-nested-blocks,
    invalid-name,
    duplicate-code,
    not-an-iterable,
    fixme
"""
ignore = """
    ancillary.json,
    config.json,
    feeps_bad_data.json,
    igrf13coeffs.csv,
    mms_keys.json,
    transformation_indices.json,
    test_pyrf.py,
    test_dispersion.py,
    test_solo.py,
    test_mms.py,
    test_models.py,
    test_plot.py,
"""
ignored-modules = "scipy,cdflib"

[tool.bumpver]
current_version = "2.4.13"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = false
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"pyrfu/__init__.py" = ["{version}", "Copyright 2020-YYYY"]
