[build-system]
requires = [
    "setuptools>=42",
    "wheel==0.38.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyrfu"
version = "2.4.19"
description = "Python Space Physics (RymdFysik) Utilities"
readme = "README.rst"
authors = [{ name = "Louis RICHARD", email = "louir@irfu.se" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft",
    "Operating System :: Microsoft :: MS-DOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    "cdflib>=1.3.0",
    "keyring>=25.5.0",
    "keyrings.alt>=5.0.2",
    "geopack>=1.0.10",
    "matplotlib>=3.9.0",
    "numba>=0.63.0",
    "numpy>=2.0,<2.4",
    "pandas>=2.2.3",
    "pycdfpp>=0.7.0",
    "python-dateutil>=2.9.0",
    "requests>=2.32.0",
    "scipy>=1.14.0",
    "tqdm>=4.66.0",
    "xarray>=2024.10.0",
]
requires-python = ">=3.10,<3.15"

[project.optional-dependencies]
git = [
    "pre-commit",
]
style = [
    "black",
    "flake8",
    "isort",
    "pylint",
]
tests = [
    "ddt",
    "pytest",
    "pytest-cov",
]
type-checking = [
    "mypy",
]
docs = [
    "nbsphinx>=0.9.2",
    "numpydoc>=1.5.0",
    "pydata-sphinx-theme>=0.13.0",
    "sphinx>=7.0.0",
    "sphinx-codeautolink>=0.15.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-gallery>=0.13.0",
    "sphinxcontrib-apidoc>=0.3.0",
]
dev = [
    "pyrfu[docs]",
    "pyrfu[git]",
    "pyrfu[style]",
    "pyrfu[tests]",
    "pyrfu[type-checking]",
]

[project.urls]
homepage = "https://pypi.org/project/pyrfu/"
documentation = "https://pyrfu.readthedocs.io/en/latest/"
source = "https://github.com/louis-richard/irfu-python"
issue-tracker = "https://github.com/louis-richard/irfu-python/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.json", "*.csv"]

[tool.pytest.ini_options]
log_file = "pyrfu-tests.log"
log_file_mode = "w"
log_file_format = "%(asctime)s %(levelname)s %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "ignore::RuntimeWarning",
]

[tool.black]
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/'''

[tool.isort]
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
disable = """
    missing-module-docstring,
    too-many-function-args,
    too-many-positional-arguments,
    too-many-arguments,
    too-many-locals,
    too-many-lines,
    too-many-statements,
    too-many-branches,
    too-many-nested-blocks,
    invalid-name,
    duplicate-code,
    not-an-iterable,
    fixme
"""
ignore = """
    ancillary.json,
    config.json,
    feeps_bad_data.json,
    igrf13coeffs.csv,
    mms_keys.json,
    transformation_indices.json,
    test_pyrf.py,
    test_dispersion.py,
    test_solo.py,
    test_mms.py,
    test_models.py,
    test_plot.py,
"""
ignored-modules = "scipy,cdflib"

[tool.mypy]
enable_error_code = "redundant-self"
files = "pyrfu"
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

# Much of the numerical computing stack doesn't have type annotations yet.
[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "boto3.*",
    "ddt.*",
    "dateutil.*",
    "matplotlib.*",
    "mpl_toolkits.*",
    "numba.*",
    "pydata_sphinx_theme.*",
    "pandas.*",
    "pytest.*",
    "scipy.*",
    "setuptools",
]

# This then excludes some modules from the above list. (So ideally we remove
# from here in time...)
[[tool.mypy.overrides]]
check_untyped_defs = false
module = [
    "pyrfu.tests.test_dispersion",
    "pyrfu.tests.test_mms",
    "pyrfu.tests.test_models",
    "pyrfu.tests.test_plot",
    "pyrfu.tests.test_pyrf",
    "pyrfu.tests.test_solo",
]


[tool.bumpver]
current_version = "2.4.19"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = false
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"pyrfu/__init__.py" = ["{version}", "Copyright 2020-YYYY"]