[metadata]
name = pyrfu
version = attr: pyrfu.__version__
url = https://pypi.org/project/pyrfu
author = Louis Richard
author_email = louisr@irfu.se
description = Python Space Physics Environment Data Analysis
long_description = file: README.rst
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Other Environment
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Documentation = https://pyrfu.readthedocs.io/en/latest/
    Release notes = https://pypi.org/project/pyrfu/#history
    Source = https://github.com/louis-richard/irfu-python

[options]
python_requires = >=3.7
packages = find:
# When the django-admin.py deprecation ends, remove "scripts".
include_package_data = true


[pylint]
disable = C0103, C0114, C0303, E1101, R0913, R0914, R0915, W0632
# C0103 : invalid-name
# C0114 : missing-module-docstring
# C0303 : trailing-whitespace
# E1101 : no-member
# R0913 : Too many arguments
# R0914 : Too many local variables
# R0915 : too-many-statements
# W0632 : unbalanced-tuple-unpacking
good-names = x, i, j, k
extension-pkg-whitelist = numpy, matplotlib.cm
ignored-modules = numpy, matplotlib.cm
ignored-classes = numpy, matplotlib.cm
ignore = tests

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html