[metadata]
name = pyrfu
version = attr: pyrfu.__version__
url = https://pypi.org/project/pyrfu
author = Louis Richard
author_email = louisr@irfu.se
description = Python Space Physics (RymdFysik) Utilities
long_description = file: README.rst
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Other Environment
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft
    Operating System :: Microsoft :: MS-DOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Documentation = https://pyrfu.readthedocs.io/en/latest/
    Release notes = https://pypi.org/project/pyrfu/#history
    Source = https://github.com/louis-richard/irfu-python

[options]
# NOTE: Can not use "file: requirements.txt" since
# (1) the "file:" syntax is not permitted for "install_requires", and
# (2) using the "file:" syntax  would violate the intent of install_requires
#     and requirements.txt.
install_requires =
    cdflib
    geopack
    matplotlib
    numba
    numpy
    pandas
    python-dateutil
    requests
    scipy
    Sphinx
    tqdm
    xarray

python_requires = >=3.7
packages = find:
# When the django-admin.py deprecation ends, remove "scripts".
include_package_data = true


[pylint]
fail-under = 9.0

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html